# todo_list

./: .env  .gitignore  LICENSE  README.md  docker-compose.override.yaml  docker-compose.yaml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 3afedfaa2cbe_initial_migration.py  5ed2a576ffc9_tasks_modified.py  6f3c784dd0fa_initial_commit.py  e34236c50348_fixed_is_verified.py
backend/app/: config.py  main.py  settings.py
backend/app/celery/: worker.py
backend/app/database/: __init__.py  base.py  db_helper.py
backend/app/database/models/: __init__.py  tasks.py  users.py
backend/app/database/redis/: __init__.py  redis.py
backend/app/mail/: mail.py
backend/app/task/: api.py  schemas.py
backend/app/user/: api.py  auth.py  dependencies.py  hash.py  models.py  schemas.py
backend/templates/mail/: password_reset.html  verify.html
backend/tests/: conftest.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/Footer/: index.jsx
frontend/src/components/Header/: Header.module.scss  index.jsx
frontend/src/components/Login/: index.jsx
frontend/src/components/Logout/: index.jsx
frontend/src/pages/: Home.jsx  LoginPage.jsx  LogoutPage.jsx  PasswordResetConfirm.jsx  PasswordResetEmail.jsx  RegisterPage.jsx  UserVerifyPage.jsx
frontend/src/redux/: store.js
frontend/src/utils/: axios.js  axiosExtended.js  settings.js
proxy/nginx/conf/: nginx.conf
(+13 files in other folders)
